// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Desktop resolution (>1047): 'Pagination' is rendered 1`] = `
Array [
  <div
    className="gallery"
  >
    <gallery-item-mock
      onClick={[Function]}
      photo={
        Object {
          "description": Object {
            "_content": "Description Photo 1",
          },
          "farm": 1,
          "id": 1,
          "media": "video",
          "secret": 123456,
          "server": "server1",
          "title": "Photo 1",
        }
      }
    />
    <gallery-item-mock
      onClick={[Function]}
      photo={
        Object {
          "description": Object {
            "_content": "Description Photo 2",
          },
          "farm": 1,
          "id": 2,
          "media": "video",
          "secret": 456789,
          "server": "server1",
          "title": "Photo 2",
        }
      }
    />
    <gallery-item-mock
      onClick={[Function]}
      photo={
        Object {
          "description": Object {
            "_content": "Description Photo 3",
          },
          "farm": 3,
          "id": 3,
          "media": "video",
          "secret": 323456,
          "server": "server3",
          "title": "Photo 3",
        }
      }
    />
    <gallery-item-mock
      onClick={[Function]}
      photo={
        Object {
          "description": Object {
            "_content": "Description Photo 4",
          },
          "farm": 1,
          "id": 4,
          "media": "video",
          "secret": 456789,
          "server": "server1",
          "title": "Photo 4",
        }
      }
    />
    <gallery-item-mock
      onClick={[Function]}
      photo={
        Object {
          "description": Object {
            "_content": "Description Photo 5",
          },
          "farm": 5,
          "id": 5,
          "media": "video",
          "secret": 123456,
          "server": "server5",
          "title": "Photo 5",
        }
      }
    />
    <gallery-item-mock
      onClick={[Function]}
      photo={
        Object {
          "description": Object {
            "_content": "Description Photo 6",
          },
          "farm": 1,
          "id": 6,
          "media": "video",
          "secret": 456789,
          "server": "server1",
          "title": "Photo 6",
        }
      }
    />
    <gallery-item-mock
      onClick={[Function]}
      photo={
        Object {
          "description": Object {
            "_content": "Description Photo 7",
          },
          "farm": 7,
          "id": 7,
          "media": "video",
          "secret": 363456,
          "server": "server7",
          "title": "Photo 7",
        }
      }
    />
    <gallery-item-mock
      onClick={[Function]}
      photo={
        Object {
          "description": Object {
            "_content": "Description Photo 8",
          },
          "farm": 1,
          "id": 8,
          "media": "video",
          "secret": 856789,
          "server": "server1",
          "title": "Photo 8",
        }
      }
    />
    <gallery-item-mock
      onClick={[Function]}
      photo={
        Object {
          "description": Object {
            "_content": "Description Photo 9",
          },
          "farm": 1,
          "id": 9,
          "media": "video",
          "secret": 856789,
          "server": "server1",
          "title": "Photo 9",
        }
      }
    />
  </div>,
  <pagination-mock
    numItems={9}
    onPageChange={[Function]}
  />,
]
`;

exports[`Mobile or Tablet resolution (<=1047): 'Pagination' isn't rendered 1`] = `
<div
  className="gallery"
>
  <gallery-item-mock
    onClick={[Function]}
    photo={
      Object {
        "description": Object {
          "_content": "Description Photo 1",
        },
        "farm": 1,
        "id": 1,
        "media": "video",
        "secret": 123456,
        "server": "server1",
        "title": "Photo 1",
      }
    }
  />
  <gallery-item-mock
    onClick={[Function]}
    photo={
      Object {
        "description": Object {
          "_content": "Description Photo 2",
        },
        "farm": 1,
        "id": 2,
        "media": "video",
        "secret": 456789,
        "server": "server1",
        "title": "Photo 2",
      }
    }
  />
  <gallery-item-mock
    onClick={[Function]}
    photo={
      Object {
        "description": Object {
          "_content": "Description Photo 3",
        },
        "farm": 3,
        "id": 3,
        "media": "video",
        "secret": 323456,
        "server": "server3",
        "title": "Photo 3",
      }
    }
  />
  <gallery-item-mock
    onClick={[Function]}
    photo={
      Object {
        "description": Object {
          "_content": "Description Photo 4",
        },
        "farm": 1,
        "id": 4,
        "media": "video",
        "secret": 456789,
        "server": "server1",
        "title": "Photo 4",
      }
    }
  />
  <gallery-item-mock
    onClick={[Function]}
    photo={
      Object {
        "description": Object {
          "_content": "Description Photo 5",
        },
        "farm": 5,
        "id": 5,
        "media": "video",
        "secret": 123456,
        "server": "server5",
        "title": "Photo 5",
      }
    }
  />
  <gallery-item-mock
    onClick={[Function]}
    photo={
      Object {
        "description": Object {
          "_content": "Description Photo 6",
        },
        "farm": 1,
        "id": 6,
        "media": "video",
        "secret": 456789,
        "server": "server1",
        "title": "Photo 6",
      }
    }
  />
  <gallery-item-mock
    onClick={[Function]}
    photo={
      Object {
        "description": Object {
          "_content": "Description Photo 7",
        },
        "farm": 7,
        "id": 7,
        "media": "video",
        "secret": 363456,
        "server": "server7",
        "title": "Photo 7",
      }
    }
  />
  <gallery-item-mock
    onClick={[Function]}
    photo={
      Object {
        "description": Object {
          "_content": "Description Photo 8",
        },
        "farm": 1,
        "id": 8,
        "media": "video",
        "secret": 856789,
        "server": "server1",
        "title": "Photo 8",
      }
    }
  />
  <gallery-item-mock
    onClick={[Function]}
    photo={
      Object {
        "description": Object {
          "_content": "Description Photo 9",
        },
        "farm": 1,
        "id": 9,
        "media": "video",
        "secret": 856789,
        "server": "server1",
        "title": "Photo 9",
      }
    }
  />
</div>
`;
